@@ -1,0 +1,27 @@
+<?php
+namespace Cobweb\ExternalImport\Exception;
+
+/*
+ * This file is part of the TYPO3 CMS project.
+ *
+ * It is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU General Public License, either version 2
+ * of the License, or any later version.
+ *
+ * For the full copyright and license information, please read the
+ * LICENSE.txt file that was distributed with this source code.
+ *
+ * The TYPO3 project - inspiring people to share!
+ */
+
+use TYPO3\CMS\Core\Exception;
+
+/**
+ * Exception for invalidating a record during a process step.
+ *
+ * @package Cobweb\ExternalImport\Exception
+ */
+class InvalidRecordException extends Exception
+{
+
+}
