@@ -1,3 +1,7 @@
+2021-08-13 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Introduce special exception for invalidating records, resolves #198
+
 2021-06-09 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Pimp the log record icon
